<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myluco.nytimessearch.activities.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    >
<TableLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tableLayout">

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDate"
            android:text="@string/beginDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:width="160dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/hint_date"
            android:id="@+id/etDate" />

    </TableRow>
    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/sortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:id="@+id/rgSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbOldest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oldest"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbNewest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest"/>
        </RadioGroup>
    </TableRow>
    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/deskValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/cbArts"
                android:text="@string/arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cbFashion"
                android:text="@string/fashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cbSports"
                android:text="@string/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </TableRow>

</TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/btSave"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>
